--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
-<package format="2">
+<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>flir_boson_usb</name>
-  <version>1.2.1</version>
+  <version>2.0.0</version>
   <description>A simple USB camera driver for the FLIR BOSON using OpenCV</description>
   <license>MIT</license>
 
@@ -13,18 +14,19 @@
   <url type="repository">https://github.com/astuff/flir_boson_usb</url>
   <url type="bugtracker">https://github.com/astuff/flir_boson_usb/issues</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <build_depend>roslint</build_depend>
-
-  <depend>roscpp</depend>
-  <depend>nodelet</depend>
+  <depend>rclcpp</depend>
+  <depend>rclcpp_components</depend>
   <depend>cv_bridge</depend>
   <depend>camera_info_manager</depend>
   <depend>image_transport</depend>
   <depend>sensor_msgs</depend>
 
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
+
   <export>
-    <nodelet plugin="${prefix}/nodelet_plugins.xml"/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
